# Quake

./: .gitignore  CMakeLists.txt  Makefile.am  configure.ac  readme.md
WinQuake/: CMakeLists.txt  Makefile.am  gl_vidglut.c  sbar.c  snd_osx.c  sys_glut.c
includes/quake/: cmd.hpp  common.hpp  cvar.hpp  gl.hpp  legacy.hpp  screen.hpp  texture.hpp  wad.hpp
includes/quake/cvar/: persistent.hpp  server_side.hpp
original/: CMakeLists.txt
original/WinQuake/: .gitignore  CMakeLists.txt  cdaudio.h  chase.cpp  cl_demo.cpp  cl_input.cpp  cl_main.cpp  cl_parse.cpp  client.h  cmd.cpp  cmd.h  common.cpp  common.h  console.cpp  console.h  cvar.cpp  cvar.h  draw.h  gl_draw.cpp  gl_mesh.cpp  gl_model.cpp  gl_model.h  gl_rlight.cpp  gl_rmain.cpp  gl_rmisc.cpp  gl_rsurf.cpp  gl_screen.cpp  gl_vidglut.c  gl_vidglut.cpp  gl_warp.c  gl_warp.cpp  glquake.h  host.c  host.cpp  host_cmd.cpp  keys.cpp  keys.h  menu.cpp  menu.h  net.h  (+32 more)
source/: cmd.cpp  common.cpp  cvar.cpp  wad.cpp
source/screen/: screenshot.cpp
